--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.120.6",
     "@react-three/fiber": "^9.0.0-rc.1",
+    "@svgr/webpack": "^8.1.0",
     "leva": "^0.9.35",
     "next": "15.1.4",
     "react": "^19.0.0",
