--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
     "three": "^0.172.0"
   },
   "devDependencies": {
