--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@react-three/drei": "^9.120.6",
     "@react-three/fiber": "^9.0.0-rc.1",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.69.0",
     "@svgr/webpack": "^8.1.0",
     "leva": "^0.9.35",
     "next": "15.1.4",
+    "next-sanity": "^9.8.35",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "sanity": "^3.69.0",
+    "styled-components": "^6.1.14",
     "three": "^0.172.0"
   },
   "devDependencies": {
