--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.69.0",
     "@svgr/webpack": "^8.1.0",
+    "canvas-confetti": "^1.9.3",
     "leva": "^0.9.35",
     "next": "15.1.4",
     "next-sanity": "^9.8.35",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
