--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@portabletext/react": "^3.2.0",
     "@react-three/drei": "^9.120.6",
     "@react-three/fiber": "^9.0.0-rc.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.69.0",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@svgr/webpack": "^8.1.0",
     "canvas-confetti": "^1.9.3",
+    "gsap": "^3.12.7",
     "leva": "^0.9.35",
     "next": "15.1.4",
     "next-sanity": "^9.8.35",
