--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@react-three/fiber": "^9.0.0-rc.1",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.69.0",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@svgr/webpack": "^8.1.0",
     "canvas-confetti": "^1.9.3",
+    "framer-motion": "^12.0.6",
     "gsap": "^3.12.7",
-    "leva": "^0.9.35",
-    "next": "15.1.4",
+    "next": "15.0.2",
     "next-sanity": "^9.8.35",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "sanity": "^3.69.0",
@@ -32,11 +33,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/canvas-confetti": "^1.9.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^22.12.0",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
