--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.5.1",
     "sanity": "^3.69.0",
     "sharp": "^0.33.5",
+    "split-type": "^0.3.4",
     "styled-components": "^6.1.14",
     "three": "^0.172.0"
   },
