--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.0.6",
     "gsap": "^3.12.7",
+    "motion": "^12.4.5",
     "next": "15.0.2",
     "next-sanity": "^9.8.35",
     "react": "18.2.0",
